--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,70 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+html, body {
+    height: 100%;
+    margin: 0;
 }
 
-.project-card {
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(236, 236, 236);
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+
+}
+
+.navbar{
+    justify-content: space-around;
+}
+.navbar-brand {
+  margin: 0%;
+}
+
+.navbar-text {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-size: x-large;
+}
+
+
+.card {
+    width: 350px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: transform 0.2s;
     padding: 20px 20px;
 }
 
-.project-card:hover {
-    transform: scale(1.05);
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card-img-top {
+    width: 100%;
+    height: 300px;
+}
+
+.badge{
+    margin: 5px;
 }
 
 .modal-body {
-    text-align: left;
+  text-align: left;
 }
 
-.card-img-top{
-    height: 250px;
-    width: 90px;
-
-}
-
-.modalImage{
-    height:  350px;
-    width: 225px;
+footer {
+    background-color: rgb(190, 38, 59);
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
 }
